# vtwm-dev

./: .gitignore  .indent.pro  2.README  3.FUTURE  4.ANNOUNCE  4.FUTURE  BUGS  CHANGELOG  CHANGES-5.2  ChangeLog  HINTS  Imakefile  Imakefile.R4  Makefile  Makefile.QNX  Makefile.am  Makefile.in  README  README.wm  WISHLIST  aclocal.m4  add_window.c  add_window.h  applets.c  config.h.in  configure  configure.ac  cursor.c  deftwmrc.c  desktop.c  desktop.h  djhjr.vtwmpm  djhjr.vtwmrc  doors.c  doors.h  events.c  events.h  files.list  gc.c  gc.h  (+38 more)
5.4.7-1/: Imakefile  cursor.c  desktop.c  desktop.h  doors.c  events.h  gc.c  iconmgr.c  menus.c  parse.c  parse.h  util.c  util.h
5.4.7-1/contrib/nexpm/: nexpm.c
5.4.7-1/contrib/vtwmrc/: vtwmrc-MWMish  vtwmrc-TWM3d
5.4.7-1/contrib/vtwmrc/images/: photon_close.xpm  photon_maximize.xpm  win95_minimize.xpm  win95_rarrow.xpm  win95_zoom.xpm
5.4.7-1/contrib/vtwmrc/sounds/: applause2.au  touch5.au
5.4.7-1/debian/: changelog  control  copyright  menu  patches  postrm  system.vtwmrc-menu
5.4.7-1/doc/: 2.1.README  4.5.README  4.6.ANNOUNCE  4.6.README
5.4.7-2/: add_window.h  applets.c  gram.y  lex.l  list.c  menus.h  regions.c  resize.c  sound.h  system.vtwmrc.2D  system.vtwmrc.3D  twm.c  twm.h
5.4.7-2/contrib/nexpm/: xpm.COPYRIGHT
5.4.7-2/contrib/vtwmrc/: vtwmrc-95ish  vtwmrc-binds  vtwmrc-menus  vtwmrc-parms
5.4.7-2/contrib/vtwmrc/images/: byzantine.xpm  dot1x3.xbm  win95_close.xpm
5.4.7-2/contrib/vtwmrc/sounds/: break2.au  chime3.au  touch3.au
5.4.7-2/debian/: changelog  changelog.Debian.old  control  menu-method  postinst  prerm  rules
5.4.7-2/doc/: 3.README  4.4.ANNOUNCE  4.7.README  4.README  BUGS  DEVELOPERS  INSTALL  vtwm.man
contrib/: vtwmrc-95ish  vtwmrc-MWMish  vtwmrc-PWMish  vtwmrc-TWM3d  vtwmrc-TWMish  vtwmrc-binds  vtwmrc-lists  vtwmrc-menus  vtwmrc-parms  vtwmrc-sound
contrib/images/: photon_minimize.xpm
contrib/nexpm/: Imakefile  nexpm.c
contrib/sounds/: bleebloo.au  boing2.au  break1.au  cardshuffle.au  cashregister.au  chime4.au  dedoo.au  touch1.au
contrib/support/: sysrc_add_apps.sh  vtwm-5.5.0.ebuild
contrib/vtwmrc/: vtwmrc-NoBorder  vtwmrc-PWMish  vtwmrc-TWMish  vtwmrc-bools  vtwmrc-lists  vtwmrc-sound
contrib/vtwmrc/images/: eyesline.xpm  nestedsqu.xbm  photon_help.xpm  photon_menu.xpm  photon_rarrow.xpm  win95_menu.xpm  win95_unzoom.xpm
contrib/vtwmrc/sounds/: applause1.au  boing1.au  boing3.au  boip.au  chime1.au  chime2.au  coinslot.au  ddl.au  doh1.au  doh2.au  doh3.au  doh4.au  hithere.au  touch2.au  touch4.au
doc/: 1.README  2.1.ANNOUNCE  2.2.README  4.4.FUTURE  4.4.README  4.5.ANNOUNCE  4.5.README  4.7.README  BUGS  CHANGELOG  HISTORY  INSTALL  SOUND  WHO  WISHLIST  vtwm.man
lnf/: .vtwmrc-95ish  .vtwmrc-MWMish  .vtwmrc-TWMish  djhjr.xpm  eyesline.xpm
nexpm/: Imakefile  Makefile  README  monet1.uue  monet1.xpm  nexpm  nexpm.c
vtwmrc/: .kshrc  Lxterm  MANIFEST  Makefile  README  color.bg.sampl  color.fg.sampl  entry_make  makewin.proto  vtwmrc.proto  xLocalTerm
xpm/: welcome.xpm
